...
    <string name="rejestracja">Rejestracja</string>
    <string name="powtorzhaslo">Powtórz Hasło</string>
    <string name="powrot_do_logowania">Wróć do ekranu logowania</string>
    <string name="wiadomosc_weryfikacyjna" tools:ignore="Typos">Wysłano wiadomość z linkiem weryfikacyjnym na podany adres E-Mail. Kliknij link w wiadomości, by zakończyć weryfikację. Jeżeli nie możesz znaleźć wiadomości, poszukaj w folderach Spam lub Kosz.</string>
    <string name="wiadomosc_reset_hasla" tools:ignore="Typos">Wysłano wiadomość z linkiem do resetu hasła na podany adres E-Mail. Jeżeli nie możesz znaleźć wiadomości, poszukaj w folderach Spam lub Kosz.</string>

    <string name="walidacja_brak_maila">Proszę podać e-mail</string>
    <string name="walidacja_brak_hasla">Proszę podać hasło</string>
    <string name="walidacja_brak_hasla2">Proszę powtórzyć hasło</string>
    <string name="walidacja_zly_mail" tools:ignore="Typos">Niepoprawny adres e-mail</string>
    <string name="walidacja_za_krotkie_haslo">Hasło musi mieć co najmniej 6 znaków</string>
    <string name="walidacja_rozne_hasla">Proszę podać to samo hasło w obu polach</string>

    <string name="blad_wysylania_maila">Błąd wysyłania e-maila: </string>
    <string name="blad_rejestracji">Błąd rejestracji: </string>
    <string name="blad_logowania">Błąd logowania: </string>
    <string name="zle_haslo">Błędny e-mail lub hasło.</string>
    <string name="niezweryfikowany_mail" tools:ignore="Typos">Adres e-mail nie jest zweryfikowany. Kliknij link w wiadomości wysłanej na ten adres.</string>
...
