...
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button" />

    <Button
        android:id="@+id/registration_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:contentDescription="@string/zarejestruj"
        android:text="@string/zarejestruj"
        android:textColor="#4A148C"
...
