<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.WorkoutExerciseViewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/previewExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/podglad"
            android:textSize="14sp"
            android:layout_gravity="right"/>
        <TextView
            android:id="@+id/exerciseNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nazwa_cwiczenia"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/workout_isCustomExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/setCounterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seria"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/countdownText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutnik"
            android:textSize="48sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/reset"
            android:minHeight="128dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_change_circle_24" />

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pauza"
            android:minHeight="128dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_play_circle_filled_24" />

        <ImageButton
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/stop"
            android:minHeight="128dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_stop_circle_24" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/confirmExerciseFinishedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_round"
            android:backgroundTint="@color/colorDivider"
            android:drawableEnd="@drawable/ic_baseline_check_24"
            android:padding="20dp"
            android:text="@string/cw_wykonane"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>