...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Fragment.ExerciseViewFragment">

    <TextView
        android:id="@+id/registration_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:text="@string/cwiczenie"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
...

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/submitAddingExerciseToPlan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style_round"
...
